# kanata

./: Cargo.toml  a.in  a.out
cfg_samples/: bone_mac.kbd  chords.kbd  chords.txt  kanata.kbd  new_chording.kbd  new_chording_2.kbd  new_chording_3.kbd
config/: Cargo.toml
config/src/cfg/: defcfg.rs  deftemplate.rs  error.rs  fake_key.rs  mod.rs  sexpr.rs  zippychord.rs
keyberon/src/: chord.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/cfg/: chord.rs  defcfg.rs  error.rs  fake_key.rs  mod.rs  parser.rs  sexpr.rs  zippychord.rs
src/: main.rs  tcp_server.rs  tests.rs  transform_chords.rs
src/cfg/: mod.rs
src/gui/: win.rs
src/kanata/: caps_word.rs  cmd.rs  dynamic_macro.rs  macos.rs  mod.rs  sequences.rs
src/kanata/output_logic/: zippychord.rs
src/kanata/windows/: interception.rs
src/keys/: macos.rs  mod.rs
src/oskbd/: linux.rs  macos.rs  mod.rs  sim_passthru.rs  simulated.rs
src/oskbd/windows/: exthook_os.rs  interception.rs  interception_convert.rs  llhook.rs  mod.rs  scancode_to_usvk.rs
src/tests/sim_tests/: chord_sim_tests.rs  chords-en-dvorak.txt  mod.rs
